testsuite/bsc.bugs/github/gh276/SuggestValueOf_TwoCon_IntegerContext.bsv.bsc-out.expected
checking package dependencies
compiling SuggestValueOf_TwoCon_IntegerContext.bsv
Error: "SuggestValueOf_TwoCon_IntegerContext.bsv", line 12, column 11: (T0003)
  Unbound constructor `DataWidth'. Perhaps `valueOf' is missing?
